# AI-evolution-team5

./: .gitignore  CLAUDE.md  Makefile  README.md  TODOS.md  progress.txt  pyproject.toml  railway.toml  start-dev.sh  vllm_server_log_20260414-000314.txt  vllm_server_log_20260414-000528.txt  vllm_server_log_20260414-005439.txt  vllm_server_log_20260415-132848.txt
.githooks/: commit-msg
.omc/: prd.json
Briefly/: project.yml
browser-extension/: .env.example  README.md  manifest.json  package-lock.json  package.json  test-permissions.cjs  tsconfig.json  vite.config.ts
docs/: Briefly_FeatureList.md  Briefly_FeatureList.xlsx  MANIFEST.md  MANIFESTO.md  PREMORTEM.md  PROJECT-MANAGEMENT-FRAMEWORK.md  README.md  SETUP_AND_INTEGRATION_GUIDE.md  WEB_DASHBOARD_USER_GUIDE.md  WHYTREE.md  audit-report-iteration-2.md  audit-report-iteration-4.md  audit-report-iteration-5.md  dependency-matrix.md  design.md  feature-inventory.md  frontend_design.md  ios-universal-links.md  mps.md  phase2-crawling.md  plan.md  railway-deployment.md
images/: login_logo.html  vertical_logo.html
scripts/: create_test_user.py  migrate_google_sub.py  run-stack.sh  seed_dev_user.py  smtp-interceptor.py  test_modal_summarize.py  vllm-server.sh
src/: __init__.py  config.py  constants.py
tests/: __init__.py  conftest.py  factories.py  test_achievement_checker.py  test_ai_metadata_extractor.py  test_ai_summarizer.py  test_auto_tagger.py  test_datetime_serializer.py  test_dev_automation.py  test_ingestion.py  test_reminder_engine.py  test_screenshot_api.py  test_share_handler.py  test_share_types.py  (+4 more)
(+380 files in other folders)
